# Gemini-hsk

./: .gitignore  .project  Gemini.cabal  LICENSE  README.md
.dist-buildwrapper/src/: .Expression.hs.bwinfo
.dist-buildwrapper/src/Gemini/: .Comparison.hs.bwinfo  .Comparison.hs.bwusage  .Equivalence.hs.bwinfo  .Equivalence.hs.bwusage  .Expression.hs.bwinfo  .Expression.hs.bwusage  .SimpleComparison.hs.bwinfo  .SimpleComparison.hs.bwusage  .Types.hs.bwinfo  .Types.hs.bwusage  Comparison.hs  Equivalence.hs  Expression.hs  SimpleComparison.hs  Types.hs
.dist-buildwrapper/src/Matching/: .Comparison.hs.bwinfo  .Comparison.hs.bwusage  .Equivalence.hs.bwinfo  .Equivalence.hs.bwusage  .Expression.hs.bwinfo  .Expression.hs.bwusage  .SimpleComparison.hs.bwinfo  .SimpleComparison.hs.bwusage  .Types.hs.bwinfo  .Types.hs.bwusage  Equivalence.hs  SimpleComparison.hs
src/Examples/: Examples.hs  Expressions.hs
src/Gemini/: Comparison.hs  Equivalence.hs  Expression.hs  Types.hs
src/Matching/: Comparison.hs  Expression.hs  Types.hs
